scrollbar fix auf der verfügbare helferinnen seite

--- a/src/frontend/src/app/components/index/index.component.scss
+++ b/src/frontend/src/app/components/index/index.component.scss
@@ -11,7 +11,6 @@
 
 .table-container {
   flex-grow: 1;
-  overflow: scroll;
   min-height: 400px;
   flex-basis: 200px;
 
